WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83749
Leak in WebSocketChannel with workers/worker-reload.html (part 2)
https://bugs.webkit.org/show_bug.cgi?id=83749
Summary
Leak in WebSocketChannel with workers/worker-reload.html (part 2)
Yuta Kitamura
Reported
2012-04-11 23:30:05 PDT
Follow-up of
bug 83345
. See also
http://code.google.com/p/chromium/issues/detail?id=122233
Even after a speculative fix at
r113414
, there are still some similar leaks reported. After some investigation I found: - A silly mistake in Chromium's WebWorkerClientImpl, and - Potential race condition that causes Peer objects to leak.
Attachments
Patch
(11.07 KB, patch)
2012-04-12 03:02 PDT
,
Yuta Kitamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuta Kitamura
Comment 1
2012-04-12 03:02:49 PDT
Created
attachment 136863
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-15 18:43:56 PDT
Comment on
attachment 136863
[details]
Patch Clearing flags on attachment: 136863 Committed
r114215
: <
http://trac.webkit.org/changeset/114215
>
WebKit Review Bot
Comment 3
2012-04-15 18:44:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug